tests/expression/set_faulty_contains.sy
start :: fn do
    a :: {1, 2, 3}
    "123" in a <=> true
end
// error: $Mismatch { .. }
